# dbt-snowflake

./: .bumpversion.cfg  .changie.yaml  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.MD  CONTRIBUTING.md  Makefile  README.md  build-requirements.txt  changie_1.18.0_linux_amd64.deb  dev-requirements.txt  dev_requirements.txt  hatch.toml  mypy.ini  pyproject.toml  setup.cfg  setup.py  test.env.example  tox.ini
.changes/: 0.0.0.md  1.0.0.md  1.0.1.md  1.1.0.md  1.1.1.md  1.2.0.md  1.2.1.md  1.3.0-b1.md  1.3.0-b2.md  1.3.0-rc1.md  1.3.0-rc2.md  1.3.0.md  1.3.1.md  1.3.2.md  1.3.3.md  1.4.0-a1.md  1.4.0-b1.md  1.4.0-rc1.md  1.4.0-rc2.md  1.4.0.md  1.4.1.md  1.4.2.md  1.4.3.md  1.4.4.md  1.4.5.md  1.5.0-a1.md  1.5.0-b1.md  1.5.0-b2.md  1.5.0-b3.md  1.5.0-b4.md  1.5.0-rc1.md  1.5.0.md  1.5.1.md  1.5.2.md  1.5.3.md  1.5.4.md  1.5.5.md  1.5.6.md  1.5.7.md  1.6.0-a1.md  (+42 more)
.changes/1.3.0/: Features-20220913-084758.yaml  Features-20220920-000056.yaml  Fixes-20220809-142845.yaml  Under the Hood-20220729-132335.yaml  Under the Hood-20220803-093405.yaml  Under the Hood-20220805-091724.yaml  Under the Hood-20220825-073653.yaml
.changes/1.4.0/: Dependency-20220902-164233.yaml  Features-20220915-164525.yaml  Features-20221130-114307.yaml  Fixes-20221209-125606.yaml  Fixes-20221219-153345.yaml  Under the Hood-20221215-072655.yaml
.changes/1.5.0/: Dependencies-20230213-174442.yaml  Dependencies-20230216-134350.yaml  Features-20221011-133105.yaml  Features-20221219-164808.yaml  Features-20230112-162620.yaml  Features-20230131-022659.yaml  Features-20230223-182450.yaml  Features-20230307-140933.yaml  Features-20230314-114033.yaml  Features-20230314-123129.yaml  Features-20230406-104219.yaml  Fixes-20230117-120349.yaml  Fixes-20230201-162407.yaml  Under the Hood-20221219-163128.yaml  Under the Hood-20230120-110325.yaml  Under the Hood-20230130-171247.yaml  Under the Hood-20230223-104631.yaml
.changes/1.6.0/: Dependencies-20230526-160223.yaml  Dependencies-20230606-125842.yaml  Dependencies-20230627-125859.yaml  Dependencies-20230703-122521.yaml  Features-20220816-081318.yaml  Features-20230417-173251.yaml  Features-20230516-122740.yaml  Features-20230604-042329.yaml  Features-20230622-114621.yaml  Features-20230714-224033.yaml  Fixes-20230508-224927.yaml  Fixes-20230509-132208.yaml  Fixes-20230518-011334.yaml  Fixes-20230706-163838.yaml  Under the Hood-20230530-161341.yaml  Under the Hood-20230601-140627.yaml
.changes/1.7.0/: Dependencies-20230711-123517.yaml  Dependencies-20230721-130136.yaml  Dependencies-20230724-123845.yaml  Dependencies-20230803-131336.yaml  Dependencies-20230809-130151.yaml  Dependencies-20230809-130216.yaml  Dependencies-20230810-124706.yaml  Dependencies-20230814-125450.yaml  Dependencies-20230817-121646.yaml  Dependencies-20230822-120421.yaml  Dependencies-20230904-121823.yaml  Dependencies-20230911-122237.yaml  Features-20231008-195410.yaml  Fixes-20230726-164729.yaml  Fixes-20230804-175222.yaml  Fixes-20230907-153305.yaml  Fixes-20230914-110800.yaml  Fixes-20230918-105721.yaml  Fixes-20231002-144648.yaml  Under the Hood-20230925-120144.yaml  Under the Hood-20230925-144814.yaml
.changes/1.8.0/: Dependencies-20231009-122807.yaml  Dependencies-20231031-120931.yaml  Dependencies-20231127-120651.yaml  Dependencies-20231128-120535.yaml  Dependencies-20240319-102636.yaml  Dependencies-20240320-111128.yaml  Dependencies-20240403-133936.yaml  Dependencies-20240412-155923.yaml  Dependencies-20240412-160023.yaml  Features-20240109-165520.yaml  Features-20240404-171704.yaml  Fixes-20240318-203635.yaml  Fixes-20240322-104553.yaml  Fixes-20240416-203625.yaml  Security-20231128-173716.yaml  Under the Hood-20231119-122853.yaml
.changes/1.9.0/: Breaking Changes-20241016-183143.yaml  Dependencies-20231219-125152.yaml  Dependencies-20240718-120852.yaml  Dependencies-20240718-120857.yaml  Dependencies-20240719-120828.yaml  Features-20240430-185714.yaml  Features-20240501-151901.yaml  Features-20240604-154856.yaml  Features-20240610-171026.yaml  Features-20240710-172345.yaml  Features-20240911-001806.yaml  Features-20240913-215416.yaml  Features-20240923-203204.yaml  (+15 more)
.github/: dependabot.yml  pull_request_template.md
dbt-snowflake/: CHANGELOG.md  CONTRIBUTING.md  README.md  hatch.toml
docker/: Dockerfile  README.md  debian-py38.Dockerfile  dev-env-default.Dockerfile  dev.Dockerfile  test.sh  ubuntu-py38.Dockerfile
docker_dev/: README.md  debian.Dockerfile  dev-env-default.Dockerfile  ubuntu.Dockerfile
docker_images/: ubuntu-py38.Dockerfile
infra/: main.tf  snowflake.tf
scripts/: build-dist.sh  werkzeug-refresh-token.py
tests/: conftest.py
(+1449 files in other folders)
