[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "dbt-snowflake"
description = "The Snowflake adapter plugin for dbt"
readme = "README.md"
keywords = ["dbt", "adapter", "adapters", "database", "elt", "dbt-core", "dbt Core", "dbt Cloud", "dbt Labs", "snowflake"]
requires-python = ">=3.9.0"
authors = [{ name = "dbt Labs", email = "info@dbtlabs.com" }]
maintainers = [{ name = "dbt Labs", email = "info@dbtlabs.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dbt-common>=1.10,<2.0",
    "dbt-adapters>=1.10.4,<2.0",
    "snowflake-connector-python[secure-local-storage]>=3.0.0,<3.12.4",
    # add dbt-core to ensure backwards compatibility of installation, this is not a functional dependency
    "dbt-core>=1.8.0",
    # installed via dbt-core but referenced directly; don't pin to avoid version conflicts with dbt-core
    "agate",
]

[project.urls]
Homepage = "https://github.com/dbt-labs/dbt-snowflake"
Documentation = "https://docs.getdbt.com"
Repository = "https://github.com/dbt-labs/dbt-snowflake.git"
Issues = "https://github.com/dbt-labs/dbt-snowflake/issues"
Changelog = "https://github.com/dbt-labs/dbt-snowflake/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests/functional", "tests/unit"]
env_files = ["test.env"]
addopts = "-v --color=yes -n auto"
filterwarnings = [
    "ignore:datetime.datetime.utcnow:DeprecationWarning",
]
